# Prepgenie-Mock-Interview-system

./: .gitattributes  .gitignore  .renderignore  AGENTSCOPE_GUIDE.md  ARCHITECTURE.md  BACKEND_DEBUG_GUIDE.md  CHANGES.md  CHAT_DEBUG_GUIDE.md  CLOUDFLARE_DEPLOYMENT.md  CLOUDFLARE_DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOY_TO_RENDER.md  DEPLOY_TO_RENDER_README.md  EVALUATION_IMPROVEMENTS.md  EVALUATION_UPDATE.md  FIXES_APPLIED.md  MODEL_FIX.md  PROMPT_IMPROVEMENTS.md  QUICKSTART.md  QUICK_START_SCRIPTS.md  README.md  README_NEW_STACK.md  RENDER_DEPLOYMENT_CHECKLIST.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_DEPLOYMENT_SUMMARY.md  SETUP_COMPLETE.md  SPEECH_TEST_GUIDE.md  TEST_REPORT.md  UI_UPDATE_SUMMARY.md  app.py  app_with_login_functionality.py  deploy-cloudflare.bat  deploy-cloudflare.sh  deploy-to-render.bat  deploy-to-render.sh  evaluation.py  interview_history.py  interview_logic.py  packages.txt  render.yaml  (+3 more)
backend/: .env.example  ai_service.py  database.py  database_render.py  index.py  main.py  model_manager.py  pyproject.toml  requirements.txt  requirements.txt.original  requirements_agentscope.txt  schema.sql  start_backend.bat  wrangler.toml
frontend/: index.html  start_frontend.bat  tailwind.config.js
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: Navbar.tsx
frontend/src/pages/: ChatWithResume.tsx  Home.tsx  InterviewHistory.tsx  MockInterview.tsx
login module/: chat.py  evaluate.py  interview.py  main.py  start_interview.py  test.py  your.py
login_module/: account.py  chat.py  evaluate.py
(+2 files in other folders)
