[project]
name = "prepgenie-api"
version = "3.2.0"
requires-python = ">=3.12"
dependencies = [
    "pypdf",
]

[tool.wrangler]
main = "index.py"
compatibility_date = "2024-09-25"

[[tool.wrangler.d1_databases]]
binding = "DB"
database_name = "prepgenie-db"
database_id = "59b7df7d-c50c-44b6-9b8a-538bfeb0f97e"

[tool.wrangler.vars]
CORS_ORIGINS = "https://prepgenie.pages.dev,http://localhost:3000,http://localhost:5173"
